// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useModaleConfirmation > Doit afficher la modale avec le titre et les messages 1`] = `
<div
  class="fixed left-0 top-0 z-[1000] flex h-screen w-screen animate-entree-gauche items-center justify-center bg-black/50"
>
  <div
    class="flex"
  >
    <div
      class="w-full max-w-md rounded-lg bg-white shadow-2xl"
    >
      <div
        class="flex-col items-start"
      >
        <div
          class="flex items-center gap-4 rounded-t-lg bg-gris/20 p-3"
        >
          <div
            class="flex h-12 w-12 items-center justify-center rounded-full bg-gray-100"
          >
            <span
              class="text-2xl text-gray-600"
            >
              ?
            </span>
          </div>
          <h2
            class="text-xl font-bold text-black"
          >
            Titre de test
          </h2>
        </div>
        <div
          class="px-4"
        >
          <p
            class="text-lg leading-relaxed"
          >
            Premier message
          </p>
          <p
            class="text-lg leading-relaxed"
          >
            Deuxième message
          </p>
        </div>
      </div>
      <div
        class="m-2 mt-8 flex justify-end gap-3"
      >
        <button
          class="px-4 py-2 transition-colors duration-200 flex items-center gap-2 bg-gris hover:bg-gris/80 text-gray-800"
          title="OK"
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`useModaleConfirmation > Doit afficher les boutons avec les bonnes variantes 1`] = `
<div
  class="fixed left-0 top-0 z-[1000] flex h-screen w-screen animate-entree-gauche items-center justify-center bg-black/50"
>
  <div
    class="flex"
  >
    <div
      class="w-full max-w-md rounded-lg bg-white shadow-2xl"
    >
      <div
        class="flex-col items-start"
      >
        <div
          class="flex items-center gap-4 rounded-t-lg bg-gris/20 p-3"
        >
          <div
            class="flex h-12 w-12 items-center justify-center rounded-full bg-gray-100"
          >
            <span
              class="text-2xl text-gray-600"
            >
              ?
            </span>
          </div>
        </div>
        <div
          class="px-4"
        >
          <p
            class="text-lg leading-relaxed"
          >
            Test
          </p>
        </div>
      </div>
      <div
        class="m-2 mt-8 flex justify-end gap-3"
      >
        <button
          class="px-4 py-2 transition-colors duration-200 flex items-center gap-2 bg-bleu text-white hover:bg-bleu/90"
          title="Primaire"
          type="button"
        >
          <span>
            Primaire
          </span>
        </button>
        <button
          class="px-4 py-2 transition-colors duration-200 flex items-center gap-2 bg-rouge hover:bg-rouge/80 text-white"
          title="Danger"
          type="button"
        >
          <span>
            Danger
          </span>
        </button>
        <button
          class="px-4 py-2 transition-colors duration-200 flex items-center gap-2 bg-green-600 hover:bg-green-700 text-white"
          title="Succès"
          type="button"
        >
          <span>
            Succès
          </span>
        </button>
        <button
          class="px-4 py-2 transition-colors duration-200 flex items-center gap-2 bg-gris hover:bg-gris/80 text-gray-800"
          title="Secondaire"
          type="button"
        >
          <span>
            Secondaire
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
